--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -188,3 +188,118 @@
   color: rgb(73, 1, 0);
   border: 2px solid rgb(73, 1, 0);
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  visibility: hidden;
+  z-index: 5;
+  transition: all 0.4s;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup__content {
+  position: relative;
+  max-width: 280px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 20px;
+  transition: all 0.7s;
+  transform: scale(0);
+}
+
+.body.light .popup__content {
+  background-color: rgb(237, 237, 237);
+  border: 2px solid rgba(27, 20, 14, 0.767);
+  box-shadow: 0 0 10px rgba(27, 20, 14, 0.767);
+}
+
+.body.dark .popup__content {
+  background-color: rgb(0, 0, 0);
+  border: 2px solid rgb(0, 186, 12);
+  box-shadow: 0 0 80px rgb(0, 186, 12);
+}
+
+.body.medium .popup__content{
+  background-color: rgb(172, 160, 130);
+  border: 2px solid rgba(27, 20, 14, 0.767);
+  box-shadow: 0 0 10px rgba(27, 20, 14, 0.767);
+}
+
+.popup.open .popup__content {
+  transform: scale(1);
+}
+
+.popup__header {
+  display: flex;
+}
+
+.popup__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+
+.body.light .popup__close {
+  border: 2px solid rgb(93, 17, 0);
+}
+
+.body.dark .popup__close {
+  border: 2px solid rgb(0, 186, 12);
+}
+
+.body.medium .popup__close {
+  border: 2px solid rgb(64, 13, 1);
+}
+
+.popup__close:hover {
+  transform: scale(1.3);
+}
+
+.popup__menu-item {
+  border: 2px solid rgba(185, 83, 0, 0);
+  border-radius: 10px;
+  padding: 5px;
+  box-sizing: border-box;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+
+.body.light .popup__menu-item:hover {
+  color: rgb(185, 83, 0);
+  border: 2px solid rgb(185, 83, 0);
+}
+
+.body.dark .popup__menu-item:hover {
+  color: rgb(174, 186, 0);
+  border: 2px solid rgb(174, 186, 0);
+}
+
+.body.medium .popup__menu-item:hover {
+  color: rgb(73, 1, 0);
+  border: 2px solid rgb(73, 1, 0);
+}
