--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -75,6 +75,10 @@
   justify-content: flex-end;
 }
 
+.sector-top{
+  display: flex;
+}
+
 .body.light .sector {
   border: 2px solid rgb(124, 60, 0);
 }
@@ -85,6 +89,11 @@
 
 .body.medium .sector {
   border: 2px solid rgb(27, 20, 14);
+}
+
+.row-vertical{
+  display: flex;
+  flex-direction: column;
 }
 
 .field-container {
