--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -131,6 +131,7 @@
 }
 
 .cell {
+  position: relative;
   width: 7vh;
   height: 7vh;
   display: flex;
@@ -138,6 +139,36 @@
   align-items: center;
   box-sizing: border-box;
   font-size: 30px;
+  background-color: rgba(240, 248, 255, 0);
+  transition: all 0.5s ease;
+}
+
+.cell::after{
+  content: "";
+  position: absolute;
+  width: 5vh;
+  height: 2px;
+  background-color: rgba(63, 63, 61, 0);
+  transition: all 0.5s ease;
+  transform: rotate(45deg);
+}
+
+.cell::before{
+  content: "";
+  position: absolute;
+  width: 5vh;
+  height: 2px;
+  background-color: rgba(63, 63, 61, 0);
+  transition: all 0.5s ease;
+  transform: rotate(-45deg);
+}
+
+.cell.crossed-out::after{
+  background-color: rgba(63, 63, 61, 0.803);
+}
+
+.cell.crossed-out::before{
+  background-color: rgba(63, 63, 61, 0.803);
 }
 
 .body.light .cell {
