feat: add styling

--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -174,7 +174,6 @@ h2{
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  font-size: 30px;
   background-color: rgba(240, 248, 255, 0);
   transition: all 0.5s ease;
 }
@@ -182,6 +181,8 @@ h2{
 .body.beginner .cell {
   width: 7vh;
   height: 7vh;
+  font-size: 30px;
+
 }
 
 .body.intermediate .cell {
@@ -453,6 +454,9 @@ h2{
   border: 2px solid rgb(73, 1, 0);
 }
 
+
+
+
 @media(max-width: 790px) {
   .body {
     font-size: 18px;
@@ -489,6 +493,19 @@ h2{
   .body.advanced .cell {
     width: 3.33vw;
     height: 3.33vw;
+  }
+
+  .body.beginner .cell {
+    font-size: 25px;
+
+  }
+
+  .body.intermediate .cell {
+    font-size: 20px;
+  }
+
+  .body.advanced .cell {
+    font-size: 15px;
   }
 
   .footer {
