--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -1,8 +1,20 @@
 body {
+    /* position: relative; */
     color: #fff;
     background: #17181c;
     font-family: sans-serif;
 }
+
+/* .stars { */
+    /* height: 100vmax; */
+    /* position: absolute; */
+    /* left: 0; */
+    /* right: 0; */
+    /* top: 0; */
+    /* bottom: 0; */
+    /* z-index: -1; */
+    /* opacity: 0.9; */
+/* } */
 
 header {
     padding: 10px 30px;
@@ -17,19 +29,40 @@ footer {
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0 10px 0 10px;
 }
+
+footer .rss {
+    width: 10%;
+}
+
+footer .rss-img {
+    opacity: 0.8;
+}
+
+footer .rss-img:hover {
+    opacity: 1;
+}
+
 footer .copyright {
     font-size: 14px;
     color: #333;
     text-align: center;
 }
+
 footer .copyright a {
     color: #444;
 }
+
 footer .copyright a:hover {
     color: #555;
 }
+
 footer .copyright:before {
     content: '©';
+}
+
+footer .nelany:before {
+    content: '';
 }
