--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -8,9 +8,23 @@
     font: 300 1em 'Fira Sans', sans-serif;
 }
 
+.sources::-webkit-scrollbar {
+    /* width: 12px; */
+    height: 10px;
+    background-color: transparent;
+    border: 1px solid rgba(67, 132, 157);
+}
+
+.sources::-webkit-scrollbar-thumb {
+    background-color: rgba(67, 132, 157, 0.787);
+    border-radius: 20px;
+    width: 20px;
+}
+
 .source__item {
     background: none;
-    border: 2px solid #30c5ff;
+    border: 2px solid #76d8ff;
+    border-radius: 50px;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
