--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -1,20 +1,13 @@
 body {
-    /* position: relative; */
     color: #fff;
-    background: #17181c;
+    /* background: #17181c; */
+    /* background: linear-gradient(to bottom, #131417, rgb(12, 24, 61)) no-repeat; */
+    background: url('https://img3.akspic.ru/crops/2/6/6/5/3/135662/135662-nochnoenebo-nebo-astronomicheskijobekt-tumannost-zvezda-3840x2160.jpg') center/cover no-repeat fixed;
     font-family: sans-serif;
+    min-height: 100vh;
+    margin: 0;
 }
 
-/* .stars { */
-    /* height: 100vmax; */
-    /* position: absolute; */
-    /* left: 0; */
-    /* right: 0; */
-    /* top: 0; */
-    /* bottom: 0; */
-    /* z-index: -1; */
-    /* opacity: 0.9; */
-/* } */
 
 header {
     padding: 10px 30px;
@@ -35,28 +28,38 @@ footer {
 
 footer .rss {
     width: 10%;
+    transition: all 0.4s;
 }
 
 footer .rss-img {
-    opacity: 0.8;
+    opacity: 0.6;
+    transition: all 0.4s;
+}
+
+footer .rss:hover {
+    transform: scale(1.05);
 }
 
 footer .rss-img:hover {
-    opacity: 1;
+    opacity: 0.8;
 }
+
 
 footer .copyright {
     font-size: 14px;
-    color: #333;
+    /* color: #333; */
+    color: #5e5e5e;
     text-align: center;
 }
 
 footer .copyright a {
-    color: #444;
+    color: #868686;
+    /* color: #444; */
 }
 
 footer .copyright a:hover {
-    color: #555;
+    color: #bababa;
+    /* color: #555; */
 }
 
 footer .copyright:before {
