--- a/news-api/src/global.css
+++ b/news-api/src/global.css
@@ -10,12 +10,60 @@ body {
 
 
 header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 10px 30px;
+}
+
+@media(max-width: 500px) {
+    header {
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
 }
 
 header h1 {
     font-size: 40px;
     font-weight: 800;
+}
+
+.my-news {
+    width: 90px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 20px 0 0;
+    padding: 0 0 3px;
+    border-radius: 50px;
+    border: 1px solid white;
+    color: white;
+    transition: all 0.4s;
+
+}
+
+.all-news {
+    background-color: rgba(255, 255, 255, 0.579);
+    border: 1px solid rgba(255, 255, 255, 0.496);
+    color: rgb(21, 21, 26);
+    font-weight: 600;
+}
+
+.my-news:hover,
+.my-news:focus {
+    border-color: #3fcc59;
+    color: #69db7e;
+    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    transform: translateY(-0.25em);
+}
+
+.all-news:hover,
+.all-news:focus {
+    background-color: #69db7e;
+    color: rgb(21, 21, 26);
 }
 
 footer {
