--- a/rss-puzzle/src/global.css
+++ b/rss-puzzle/src/global.css
@@ -1,3 +1,23 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -24,6 +44,17 @@ body {
   color: rgba(255, 240, 227, 0.903);
 }
 
+.content-fadeout {
+  animation: fadeOut 1s;
+}
+
+.main-content {
+  background-image: none;
+  background-color: rgb(250, 233, 220);
+  color: rgb(92, 38, 17);
+  animation: fadeIn 2s;
+}
+
 .main-title {
   margin: 10% 0 0 0;
   font-size: 48px;
@@ -35,16 +66,6 @@ body {
   margin: 4% 0 0 0;
   font-size: 22px;
   font-weight: 300;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
 }
 
 .login-form {
