--- a/rss-puzzle/src/global.css
+++ b/rss-puzzle/src/global.css
@@ -49,6 +49,8 @@ body {
 }
 
 .main-content {
+  justify-content: center;
+  gap: 20px;
   background-image: none;
   background-color: rgb(250, 233, 220);
   color: rgb(92, 38, 17);
@@ -159,4 +161,50 @@ body {
 
 .log-out-string:hover {
   border-bottom: 1px solid rgba(255, 240, 227, 0.903);
+}
+
+.field {
+  width: 90vw;
+  max-width: 800px;
+  height: 20vw;
+  min-height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid rgba(122, 96, 100, 0.458);
+  background-color: rgb(252, 246, 241);
+}
+
+.line {
+  width: 90vw;
+  max-width: 800px;
+  display: flex;
+  border: 2px solid rgba(122, 96, 100, 0.458);
+  background-color: rgb(252, 246, 241);
+}
+
+.word {
+  height: 2vw;
+  min-height: 30px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgba(122, 96, 100, 0.458);
+  animation: fadeIn ease 6s;
+  transition: color 0.5s;
+  cursor: pointer;
+  font-weight: 800;
+}
+
+.word:hover {
+  color: rgb(255, 0, 0);
+}
+
+.cell {
+  min-width: 30px;
+  height: 2vw;
+  min-height: 30px;
+  box-sizing: border-box;
+  flex-grow: 1;
+  border: 2px solid rgba(122, 96, 100, 0.458);
 }
