--- a/rss-puzzle/src/global.css
+++ b/rss-puzzle/src/global.css
@@ -177,6 +177,8 @@ body {
 .line {
   width: 90vw;
   max-width: 800px;
+  height: 2vw;
+  min-height: 30px;
   display: flex;
   border: 2px solid rgba(122, 96, 100, 0.458);
   background-color: rgb(252, 246, 241);
@@ -190,10 +192,24 @@ body {
   justify-content: center;
   align-items: center;
   border: 2px solid rgba(122, 96, 100, 0.458);
-  animation: fadeIn ease 6s;
+  animation: fadeIn ease 1s;
   transition: color 0.5s;
   cursor: pointer;
   font-weight: 800;
+}
+
+@media (max-width: 800px) {
+  .word {
+    font-size: 13px;
+    font-weight: 800;
+  }
+}
+
+@media (max-width: 400px) {
+  .word {
+    font-size: 10px;
+    font-weight: 800;
+  }
 }
 
 .word:hover {
