--- a/rss-puzzle/src/global.css
+++ b/rss-puzzle/src/global.css
@@ -33,6 +33,7 @@ body {
 .content {
   width: 100%;
   max-width: 1440px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -205,10 +206,10 @@ body {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .word {
-    font-size: 10px;
-    font-weight: 800;
+    font-size: 11px;
+    font-weight: 700;
   }
 }
 
