--- a/rss-puzzle/src/global.css
+++ b/rss-puzzle/src/global.css
@@ -18,6 +18,26 @@
   }
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  12.5%,
+  37.5%,
+  62.5%,
+  87.5% {
+    transform: translateX(15px);
+  }
+
+  25%,
+  50%,
+  75% {
+    transform: translateX(-15px);
+  }
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -71,120 +91,6 @@ body {
   font-weight: 300;
 }
 
-.login-form {
-  width: 300px;
-  height: 350px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 5% 0 0 0;
-  background-color: rgba(216, 171, 137, 0.721);
-  border: 2px solid rgba(216, 171, 137, 0.756);
-  border-radius: 10px;
-  animation: fadeIn ease 3s;
-}
-
-.error-message-container {
-  width: 95%;
-  height: 60px;
-  margin: 10px 5px;
-  color: rgb(139, 29, 9);
-  text-decoration: underline;
-  font-weight: 500;
-}
-
-.name-input {
-  border: 2px solid rgba(216, 171, 137, 0.756);
-  border-radius: 5px;
-  color: rgb(92, 38, 17);
-  margin: 10px;
-  padding: 5px;
-  letter-spacing: 1px;
-}
-
-.name-input:focus {
-  outline: 2px solid rgba(127, 52, 23);
-  outline-offset: -4px;
-}
-
-.button {
-  padding: 0 5px 3px 5px;
-  background-color: rgba(184, 73, 59, 0.825);
-  border: 1px solid rgba(139, 29, 9, 0.386);
-  border-radius: 5px;
-  color: rgba(255, 240, 227, 0.903);
-  transition: all 0.4s;
-  cursor: pointer;
-}
-
-.button-login {
-  width: 100px;
-  height: 30px;
-  margin: 10% 0 0 0;
-  font-weight: 800;
-  letter-spacing: 1px;
-}
-
-.button:hover {
-  transform: scale(1.1);
-}
-
-.login-form:invalid .button {
-  opacity: 0.5;
-}
-
-.greeting {
-  margin: 10% 0 0 0;
-  font-size: 50px;
-  font-weight: 500;
-  animation: fadeIn 2s ease;
-}
-
-.button-start {
-  width: 300px;
-  height: 50px;
-  margin: 5% 0 0 0;
-  font-size: 23px;
-  font-weight: 00;
-  letter-spacing: 8px;
-  animation: fadeIn ease 4s;
-}
-
-.log-out-string {
-  margin: 2% 0 0 0;
-  border-bottom: 1px solid rgba(255, 240, 227, 0);
-  transition: all 0.4s;
-  cursor: pointer;
-  font-size: 21px;
-  font-weight: 300;
-  animation: fadeIn ease 6s;
-}
-
-.log-out-string:hover {
-  border-bottom: 1px solid rgba(255, 240, 227, 0.903);
-}
-
-.field {
-  width: 90vw;
-  max-width: 800px;
-  height: 20vw;
-  min-height: 300px;
-  display: flex;
-  flex-wrap: wrap;
-  border: 2px solid rgba(122, 96, 100, 0.458);
-  background-color: rgb(252, 246, 241);
-}
-
-.line {
-  width: 90vw;
-  max-width: 800px;
-  height: 2vw;
-  min-height: 30px;
-  display: flex;
-  border: 2px solid rgba(122, 96, 100, 0.458);
-  background-color: rgb(252, 246, 241);
-}
-
 .word {
   height: 2vw;
   min-height: 30px;
@@ -215,13 +121,4 @@ body {
 
 .word:hover {
   color: rgb(255, 0, 0);
-}
-
-.cell {
-  min-width: 30px;
-  height: 2vw;
-  min-height: 30px;
-  box-sizing: border-box;
-  flex-grow: 1;
-  border: 2px solid rgba(122, 96, 100, 0.458);
 }
