--- a/rss-puzzle/src/components/logoutString/LogoutString.scss
+++ b/rss-puzzle/src/components/logoutString/LogoutString.scss
@@ -6,8 +6,8 @@
   font-size: 21px;
   font-weight: 300;
   animation: fadeIn ease 6s;
-}
 
-.log-out-string:hover {
-  border-bottom: 1px solid rgba(255, 240, 227, 0.903);
+  &:hover {
+    border-bottom: 1px solid rgba(255, 240, 227, 0.903);
+  }
 }
