--- a/rss-puzzle/src/global.scss
+++ b/rss-puzzle/src/global.scss
@@ -103,6 +103,10 @@ body {
   transition: color 0.5s;
   cursor: pointer;
   font-weight: 800;
+
+  &:hover {
+    color: rgb(255, 0, 0);
+  }
 }
 
 @media (max-width: 800px) {
@@ -117,10 +121,6 @@ body {
     font-size: 11px;
     font-weight: 700;
   }
-}
-
-.word:hover {
-  color: rgb(255, 0, 0);
 }
 
 .wrong-word {
