feat: RSS-PZ-14 Implement Auto-Complete Button

--- a/rss-puzzle/src/components/button/Button.scss
+++ b/rss-puzzle/src/components/button/Button.scss
@@ -2,6 +2,7 @@
   padding: 0 5px 3px 5px;
   background-color: rgba(184, 73, 59, 0.825);
   border: 1px solid rgba(139, 29, 9, 0.386);
+  box-shadow: 0 0 5px rgba(47, 0, 0, 0.5);
   border-radius: 5px;
   color: rgba(255, 240, 227, 0.903);
   transition: all 0.4s;
