--- a/rss-puzzle/src/components/field/Field.scss
+++ b/rss-puzzle/src/components/field/Field.scss
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   align-content: flex-start;
   border: 2px solid rgba(122, 96, 100, 0.458);
+  box-shadow: 0 0 3px rgba(47, 0, 0, 0.5);
   background-color: rgb(252, 246, 241);
 }
 
