--- a/rss-puzzle/src/components/select/Select.scss
+++ b/rss-puzzle/src/components/select/Select.scss
@@ -1,5 +1,5 @@
 .select {
-  width: 55px;
+  width: 65px;
   padding: 5px;
   display: block;
   font-size: 16px;
@@ -23,6 +23,10 @@
 
 .select:focus {
   outline: none;
+}
+
+.option {
+  position: relative;
 }
 
 .completed-option {
