--- a/rss-puzzle/src/components/select/Select.scss
+++ b/rss-puzzle/src/components/select/Select.scss
@@ -9,7 +9,7 @@
   color: rgb(92, 38, 17);
   line-height: 1.3;
   box-sizing: border-box;
-  margin: 0 0 40px 0;
+  margin: 0;
   border: 1px solid #aaa;
   box-shadow: 0 0 3px rgba(47, 0, 0, 0.5);
   border-radius: 0.5em;
