--- a/rss-puzzle/src/components/select/Select.scss
+++ b/rss-puzzle/src/components/select/Select.scss
@@ -10,7 +10,7 @@
   line-height: 1.3;
   box-sizing: border-box;
   margin: 0;
-  border: 1px solid #aaa;
+  border: 1px solid rgb(170, 170, 170);
   box-shadow: 0 0 3px rgba(47, 0, 0, 0.5);
   border-radius: 0.5em;
   transition: all 0.4s;
