--- a/rss-puzzle/src/global.scss
+++ b/rss-puzzle/src/global.scss
@@ -68,7 +68,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url('./assets/firstscreen.jpg');
+  background-image: url('./assets/icons/firstscreen.jpg');
   background-size: cover;
   background-position: center;
   border: 2px solid rgba(122, 96, 100, 0.458);
