feat: RSS-PZ-19 Implement Pronunciation Hint Feature for Sentences

--- a/rss-puzzle/src/pages/MainPage.scss
+++ b/rss-puzzle/src/pages/MainPage.scss
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 5px;
+  margin: 0;
   color: rgba(184, 73, 59, 0.825);
   transition: all 0.4s;
 }
