--- a/rss-puzzle/src/components/button/Button.scss
+++ b/rss-puzzle/src/components/button/Button.scss
@@ -20,6 +20,12 @@
     align-items: center;
   }
 
+  &.speaker {
+    background-color: rgb(248, 240, 234);
+    border: none;
+    box-shadow: none;
+  }
+
   &.disabled {
     pointer-events: none;
     opacity: 0.5;
@@ -62,4 +68,16 @@
   height: 20px;
   filter: brightness(0) saturate(100%) invert(100%) sepia(23%) saturate(6469%) hue-rotate(292deg) brightness(126%)
     contrast(106%);
+}
+
+.speaker-img {
+  width: 30px;
+  height: 30px;
+  filter: brightness(0) saturate(100%) invert(74%) sepia(0%) saturate(1%) hue-rotate(168deg) brightness(92%)
+    contrast(91%);
+}
+
+.speaker-speak .speaker-img {
+  filter: brightness(0) saturate(100%) invert(32%) sepia(37%) saturate(1032%) hue-rotate(319deg) brightness(105%)
+    contrast(92%);
 }
