--- a/rss-puzzle/src/components/button/Button.scss
+++ b/rss-puzzle/src/components/button/Button.scss
@@ -24,6 +24,8 @@
     background-color: rgb(248, 240, 234);
     border: none;
     box-shadow: none;
+    pointer-events: none;
+    opacity: 0;
   }
 
   &.disabled {
@@ -80,4 +82,9 @@
 .speaker-speak .speaker-img {
   filter: brightness(0) saturate(100%) invert(32%) sepia(37%) saturate(1032%) hue-rotate(319deg) brightness(105%)
     contrast(92%);
+}
+
+.button.appearing {
+  opacity: 1;
+  pointer-events: all;
 }
