--- a/rss-puzzle/src/pages/MainPage.scss
+++ b/rss-puzzle/src/pages/MainPage.scss
@@ -27,6 +27,11 @@
   justify-content: space-between;
 }
 
+.tools-buttons-container {
+  display: flex;
+  gap: 10px;
+}
+
 .main__translate-container {
   width: 100%;
   min-height: 35px;
