--- a/async-race/src/components/button/Button.scss
+++ b/async-race/src/components/button/Button.scss
@@ -1,4 +1,19 @@
 .button {
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0 5px 3px 5px;
+  background-color: rgba(18, 1, 26, 0.749);
+  border: 1px solid rgb(209, 182, 255);
+  box-shadow: 0px 10px 10px rgb(17, 0, 36);
+  border-radius: 5px;
+  color: rgb(209, 182, 255);
+  transition: all 0.4s;
+  cursor: pointer;
+  text-shadow: 2px 2px 4px rgb(0, 0, 0);
+
   &:hover {
     transform: scale(1.1);
   }
@@ -12,4 +27,22 @@
 .button.appearing {
   opacity: 1;
   pointer-events: all;
+}
+
+.big-button {
+  width: 110px;
+}
+
+.small-button {
+  width: 57px;
+}
+
+.button-pedal {
+  width: 45px;
+  height: 40px;
+  margin: 5px 0;
+  border: 1px solid rgba(0, 255, 38, 0.57);
+  color: #00ff26;
+  font-weight: 100;
+  font-size: 11px;
 }
