--- a/async-race/src/pages/GaragePage.scss
+++ b/async-race/src/pages/GaragePage.scss
@@ -1,46 +1,52 @@
 .main__road-container {
   width: 100%;
-}
 
-.main__road-tools {
-  display: flex;
-  align-items: center;
-}
+  .main__road-tools {
+    display: flex;
+    align-items: center;
+  }
 
-.main__car-name {
-  display: block;
-}
+  .main__car-name {
+    display: block;
+  }
 
-.main__road {
-  position: relative;
-  width: 100%;
-  display: flex;
-  align-items: end;
-  box-sizing: border-box;
-  padding-bottom: 5px;
-  margin-bottom: 10px;
-  gap: 10px;
-}
+  .main__road {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: end;
+    box-sizing: border-box;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+    gap: 10px;
 
-.main__track {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: end;
-  align-items: end;
-  box-sizing: border-box;
-}
+    .main__track {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: end;
+      align-items: end;
+      box-sizing: border-box;
 
-.main__road::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(to right, white 60%, transparent 40%);
-  background-size: 10px 2px;
+      .flag {
+        max-width: 80px;
+        margin-right: 140px;
+        z-index: 10;
+      }
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(to right, white 60%, transparent 40%);
+      background-size: 10px 2px;
+    }
+  }
 }
 
 .car {
@@ -49,12 +55,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-}
-
-.flag {
-  max-width: 80px;
-  margin-right: 140px;
-  z-index: 10;
 }
 
 @media (max-width: 1000px) {
