--- a/async-race/src/components/road/Road.scss
+++ b/async-race/src/components/road/Road.scss
@@ -16,6 +16,7 @@
   padding-bottom: 5px;
   margin-bottom: 10px;
   gap: 10px;
+  box-shadow: 0px 10px 10px rgb(17, 0, 36);
 
   .main__track {
     position: relative;
