--- a/async-race/src/pages/GaragePage.scss
+++ b/async-race/src/pages/GaragePage.scss
@@ -12,6 +12,12 @@
   fill: #c6cfd0;
 }
 
+.flag {
+  max-width: 80px;
+  margin-right: 140px;
+  z-index: 10;
+}
+
 @media (max-width: 1000px) {
   .main__road-tools {
     margin-bottom: 5px;
