--- a/async-race/src/components/header/header.scss
+++ b/async-race/src/components/header/header.scss
@@ -24,6 +24,7 @@
       margin: 0;
       border: 1px solid rgb(209, 182, 255);
       box-shadow: 0px 10px 10px rgb(17, 0, 36);
+      transition: all 0.4s;
     }
 
     .input-text {
@@ -37,6 +38,10 @@
       width: 30px;
       padding: 0px;
       background-color: rgba(18, 1, 26, 0.749);
+    }
+
+    .red-border {
+      border: 1px solid rgba(254, 0, 0, 0.804);
     }
   }
 }
