--- a/async-race/src/global.scss
+++ b/async-race/src/global.scss
@@ -1,6 +1,6 @@
 .body {
-  width: 100dvw;
-  min-height: 100dvh;
+  width: 100%;
+  min-height: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
