--- a/async-race/src/global.scss
+++ b/async-race/src/global.scss
@@ -37,3 +37,13 @@
     gap: 8px;
   }
 }
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.green-border {
+  border: 2px solid #00ff26;
+  color: #00ff26;
+}
