--- a/async-race/src/pages/WinnerPage.scss
+++ b/async-race/src/pages/WinnerPage.scss
@@ -3,6 +3,8 @@
   background-color: rgba(18, 1, 26, 0.353);
   flex-shrink: 0;
   box-shadow: 0px 10px 10px rgb(17, 0, 36);
+  font-size: 12px;
+  margin-bottom: 5px;
 
   .records-column {
     display: flex;
