--- a/async-race/src/components/main/main.scss
+++ b/async-race/src/components/main/main.scss
@@ -6,4 +6,14 @@
     flex-direction: column;
     width: 100%;
   }
+
+  &__tittles {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
+  &__page-tittle {
+    font-size: 20px;
+  }
 }
