--- a/async-race/src/global.scss
+++ b/async-race/src/global.scss
@@ -14,7 +14,7 @@
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   margin: 0;
-  padding: 20px;
+  padding: 15px 20px;
   caret-color: transparent;
 }
 
