--- a/async-race/src/pages/WinnerPage.scss
+++ b/async-race/src/pages/WinnerPage.scss
@@ -38,14 +38,13 @@
   }
 
   .record-car {
-    width: 70px;
+    width: 115px;
     position: relative;
   }
 
   .records-car-img {
-    width: 54px;
-    height: 19.5px;
-    left: 7px;
-    bottom: 12px;
+    position: relative;
+    width: 92px;
+    height: 35.5px;
   }
 }
