--- a/fun-chat/src/components/button/Button.scss
+++ b/fun-chat/src/components/button/Button.scss
@@ -8,7 +8,7 @@
   padding: 2px 5px 6px 5px;
   background-color: rgba(18, 1, 26, 0.749);
   // border: 1px solid rgb(209, 182, 255);
-  border: 1px solid rgb(194 216 0);
+  border: 1px solid rgb(194, 216, 0);
 
   box-shadow: 0px 10px 10px rgb(17, 0, 36);
   border-radius: 5px;
@@ -18,9 +18,6 @@
   cursor: pointer;
   text-shadow: 2px 2px 4px rgb(0, 0, 0);
 
-  font-family: 'Covered By Your Grace', cursive;
-  font-weight: 400;
-  font-style: normal;
   font-size: 25px;
 
   &:hover {
