--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -10,11 +10,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  color: #00ff26;
-  font-family: 'Nunito', sans-serif;
+  color: rgba(0, 255, 38, 0.9);
+  // font-family: 'Nunito', sans-serif;
+  // font-style: normal;
+  font-family: 'Covered By Your Grace', cursive;
+  font-weight: 400;
   font-style: normal;
+  letter-spacing: 5px;
   margin: 0;
-  padding: 15px 20px;
+  padding: 45px 20px;
   caret-color: transparent;
 }
 
