--- a/fun-chat/src/components/button/Button.scss
+++ b/fun-chat/src/components/button/Button.scss
@@ -1,5 +1,5 @@
 .button {
-  width: 50%;
+  width: 100%;
   height: 45px;
   display: flex;
   justify-content: center;
@@ -17,8 +17,11 @@
   transition: all 0.4s;
   cursor: pointer;
   text-shadow: 2px 2px 4px rgb(0, 0, 0);
-
-  font-size: 25px;
+  font-family: 'Covered By Your Grace', cursive;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 32px;
+  letter-spacing: 3px;
 
   &:hover {
     transform: scale(1.1);
