--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -20,14 +20,33 @@
   margin: 0;
   padding: 45px 20px;
   caret-color: transparent;
+
+  @media (max-width: 950px) {
+    padding: 20px 0;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .disabled {
   pointer-events: none;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
-.green-border {
-  border: 2px solid #00ff26;
-  color: #00ff26;
+.input {
+  height: 30px;
+  padding: 3px;
+  background-color: rgba(18, 1, 26, 0.93);
+  border: 1px solid rgb(194, 216, 0);
+  box-shadow: 0px 10px 10px rgb(17, 0, 36);
+  border-radius: 5px;
+  color: rgb(253, 255, 237);
+  transition: all 0.4s;
+  cursor: pointer;
+  text-shadow: 2px 2px 4px rgb(0, 0, 0);
+  font-size: 14px;
+  letter-spacing: 1px;
 }
