--- a/fun-chat/src/pages/NotFound.scss
+++ b/fun-chat/src/pages/NotFound.scss
@@ -1,6 +1,7 @@
 .notfound-text {
   margin: 5% 0 0 0;
   color: rgb(173, 216, 0);
+  text-shadow: 2px 2px 8px rgb(255, 0, 0);
   font-size: 40px;
   font-weight: 800;
 }
