--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -220,10 +220,20 @@
           .message-status {
             display: flex;
             justify-content: end;
+            align-items: center;
+            gap: 10px;
 
             @media (max-width: 700px) {
               letter-spacing: 2px;
               font-size: 12px;
+            }
+
+            .marker-status {
+              width: 5px;
+              height: 5px;
+              margin-top: 3px;
+              background-color: rgb(239, 255, 94);
+              border-radius: 50%;
             }
           }
         }
