--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -59,7 +59,8 @@
     width: 100%;
     max-height: 75%;
     display: flex;
-    gap: 10px;
+    // gap: 10px;
+    justify-content: space-between;
     flex-grow: 1;
 
     .main__people {
@@ -138,7 +139,8 @@
     }
 
     .main__chat {
-      flex-grow: 1;
+      width: 69%;
+      // flex-grow: 1;
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
@@ -154,6 +156,7 @@
 
       .main__chat-main {
         flex-grow: 1;
+
         display: flex;
         flex-direction: column;
         gap: 15px;
@@ -208,7 +211,10 @@
           }
 
           .message-text {
+            min-width: 0;
             display: flex;
+            word-break: break-all;
+            overflow: hidden;
             box-sizing: border-box;
             padding: 10px;
             font-family: 'Nunito', sans-serif;
