--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -105,6 +105,19 @@
           background-color: rgb(21, 255, 0);
         }
 
+        &.sender li::before {
+          content: '';
+          width: 5px;
+          height: 5px;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          left: -10px;
+          border-radius: 0;
+          margin-right: 2px;
+          background-color: rgb(255, 94, 0);
+        }
+
         & li:hover::before {
           background-color: rgb(239, 255, 94);
           box-shadow: 2px 2px 8px rgb(255, 0, 0);
@@ -140,7 +153,6 @@
 
     .main__chat {
       width: 69%;
-      // flex-grow: 1;
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
