--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -105,7 +105,7 @@
           background-color: rgb(21, 255, 0);
         }
 
-        &.sender li::before {
+        & li.sender::before {
           content: '';
           width: 5px;
           height: 5px;
@@ -116,6 +116,7 @@
           border-radius: 0;
           margin-right: 2px;
           background-color: rgb(255, 94, 0);
+          box-shadow: 2px 2px 8px rgb(255, 234, 0);
         }
 
         & li:hover::before {
