--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -87,6 +87,11 @@
           cursor: pointer;
         }
 
+        & li.sender {
+          color: rgb(255, 111, 28);
+          text-shadow: 2px 2px 8px rgb(255, 234, 0);
+        }
+
         & li:hover {
           color: rgb(239, 255, 94);
           text-shadow: 2px 2px 8px rgb(255, 0, 0);
@@ -103,6 +108,7 @@
           border-radius: 50%;
           margin-right: 2px;
           background-color: rgb(21, 255, 0);
+          transition: all 0.4s;
         }
 
         & li.sender::before {
@@ -192,6 +198,14 @@
         &::-webkit-scrollbar-track {
           background-color: rgba(18, 1, 26, 0.749);
           border: 1px solid rgb(194, 216, 0);
+        }
+
+        .main__please-select {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          box-sizing: border-box;
+          padding-top: 30%;
         }
 
         .message-container {
