--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -82,6 +82,7 @@
 
         & li {
           position: relative;
+          word-break: break-all;
           color: rgba(0, 255, 38, 0.9);
           transition: all 0.4s;
           cursor: pointer;
@@ -238,10 +239,10 @@
           }
 
           .message-text {
-            min-width: 0;
+            flex-grow: 0;
             display: flex;
             word-break: break-all;
-            overflow: hidden;
+            // overflow: hidden;
             box-sizing: border-box;
             padding: 10px;
             font-family: 'Nunito', sans-serif;
@@ -251,29 +252,85 @@
           }
 
           .message-footer {
+            min-height: 20px;
             display: flex;
             justify-content: end;
             align-items: center;
             gap: 7px;
-          }
+            flex-wrap: wrap;
 
-          .marker-status {
-            width: 5px;
-            height: 5px;
-            margin-top: 3px;
-            background-color: rgb(239, 255, 94);
-            border-radius: 50%;
-          }
+            .message-tools {
+              display: flex;
+              flex-grow: 1;
+              justify-content: flex-start;
+              box-sizing: border-box;
+              padding: 0 5px;
+              gap: 5px;
 
-          .message-status {
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            gap: 10px;
+              .tool {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                transition: all 0.4s;
+                border: 1px solid rgba(194, 216, 0, 0);
+                border-radius: 5px;
+                box-sizing: border-box;
+                padding: 1px;
+                text-align: center;
+              }
 
-            @media (max-width: 700px) {
-              letter-spacing: 2px;
-              font-size: 12px;
+              .change-message {
+                letter-spacing: 1px;
+                font-size: 12px;
+              }
+
+              .delete-message {
+                padding: 1px 0 1px 5px;
+              }
+
+              .tool:hover {
+                color: rgb(0, 255, 60);
+                border: 1px solid rgb(0, 255, 60);
+                text-shadow: 2px 2px 8px rgb(255, 0, 0);
+                box-shadow: 2px 2px 8px rgb(255, 0, 0);
+              }
+
+              .changed {
+                pointer-events: none;
+              }
+
+              .hidden {
+                display: none;
+              }
+
+              .hidden-for-incoming {
+                display: none;
+              }
+            }
+
+            .marker-status {
+              width: 5px;
+              height: 5px;
+              margin-top: 3px;
+              background-color: rgb(239, 255, 94);
+              border-radius: 50%;
+            }
+
+            .message-status {
+              display: flex;
+              justify-content: end;
+              align-items: center;
+              gap: 10px;
+
+              @media (max-width: 700px) {
+                letter-spacing: 2px;
+                font-size: 12px;
+              }
+            }
+
+            .hidden-for-incoming {
+              display: none;
             }
           }
         }
