feat: add search

--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -141,6 +141,10 @@
         opacity: 0.5;
       }
 
+      .hidden {
+        display: none;
+      }
+
       .main__people-list::-webkit-scrollbar {
         width: 5px;
         background-color: rgba(18, 1, 26, 0.749);
