--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -75,7 +75,7 @@
         flex-direction: column;
         gap: 10px;
         overflow-y: auto;
-        padding: 0 0 0 10px;
+        padding: 0 0 0 20px;
         letter-spacing: 3px;
 
         list-style: none;
@@ -105,7 +105,7 @@
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
-          left: -10px;
+          left: -15px;
           border-radius: 50%;
           margin-right: 2px;
           background-color: rgb(21, 255, 0);
@@ -113,16 +113,14 @@
         }
 
         & li.sender::before {
-          content: '';
-          width: 5px;
-          height: 5px;
+          content: attr(data-counter);
+          word-break: keep-all;
+          height: 0;
           position: absolute;
-          top: 50%;
+          top: 4%;
           transform: translateY(-50%);
-          left: -10px;
+          left: -17px;
           border-radius: 0;
-          margin-right: 2px;
-          background-color: rgb(255, 94, 0);
           box-shadow: 2px 2px 8px rgb(255, 234, 0);
         }
 
