feat: add breakLine and popup

--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -28,6 +28,8 @@
     }
 
     .main__tittle {
+      display: flex;
+      align-items: center;
       font-size: 20px;
       font-weight: 700;
     }
