--- a/fun-chat/src/components/popup/Popup.scss
+++ b/fun-chat/src/components/popup/Popup.scss
@@ -1,8 +1,9 @@
 .popup {
   position: fixed;
-  top: 40%;
-  left: 50%;
-  width: 300px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,23 +18,33 @@
   font-size: 30px;
   text-shadow: 5px 5px 5px rgb(0, 0, 0);
   background-color: rgba(18, 1, 26, 0.88);
-  border: 1px solid #00ff26;
-  border-radius: 10px;
-  color: #00ff26;
-  box-shadow: 0px 10px 10px rgb(17, 0, 36);
   z-index: 100;
+
+  &__content {
+    width: 90%;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 40px 20px;
+    background-color: rgba(18, 1, 26, 0.88);
+    border: 1px solid #00ff26;
+    border-radius: 10px;
+    color: #7bff33;
+    box-shadow: 0px 0px 10px #d0ff00;
+    transition: all 0.4s;
+  }
+
+  &.open {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+  }
 }
 
-.popup.open {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1) translate(-50%);
-}
-
-.popup__tittle {
-  margin: 10px;
-}
-
-.ps {
-  font-size: 16px;
+.content .popup__tittle {
+  margin: 40px 0;
+  text-shadow: 0px 0px 10px #ff0000;
 }
