--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -1,6 +1,8 @@
 .body {
+  position: relative;
+  overflow: hidden;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
