--- a/fun-chat/src/components/content/Content.scss
+++ b/fun-chat/src/components/content/Content.scss
@@ -217,12 +217,16 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   z-index: -1;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .butterfly-fat {
   width: 65px;
   height: 45px;
+}
+
+.butterfly-purple {
+  opacity: 1;
 }
 
 .flying-butterfly.animation1 {
