--- a/fun-chat/src/components/content/Content.scss
+++ b/fun-chat/src/components/content/Content.scss
@@ -1,7 +1,7 @@
 @keyframes moveAnimation1 {
   0% {
     top: 80%;
-    left: -10%;
+    left: -15%;
   }
 
   20% {
@@ -26,14 +26,14 @@
 
   100% {
     top: 5%;
-    left: 110%;
+    left: 115%;
   }
 }
 
 @keyframes moveAnimation2 {
   0% {
     top: 5%;
-    left: 110%;
+    left: 115%;
   }
 
   20% {
@@ -58,14 +58,14 @@
 
   100% {
     top: 40%;
-    left: -10%;
+    left: -15%;
   }
 }
 
 @keyframes moveAnimation3 {
   0% {
     top: 35%;
-    left: 110%;
+    left: 115%;
   }
 
   20% {
@@ -90,14 +90,14 @@
 
   100% {
     top: 50%;
-    left: -10%;
+    left: -15%;
   }
 }
 
 @keyframes moveAnimation4 {
   0% {
     top: 35%;
-    left: 110%;
+    left: 115%;
   }
 
   20% {
@@ -122,7 +122,7 @@
 
   100% {
     top: 10%;
-    left: -10%;
+    left: -15%;
   }
 }
 
@@ -229,6 +229,33 @@
   opacity: 1;
 }
 
+.butterfly-button-img {
+  width: 45px;
+  height: 35px;
+  transition: all 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+  opacity: 0.7;
+}
+
+.chat-onn {
+  z-index: 100;
+  transition:
+    width 0.4s,
+    height 0.4s,
+    transform 0.4s;
+}
+
+.grow {
+  width: 70px;
+  height: 65px;
+}
+
+.butterfly-button-img:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 8px rgb(255, 234, 0);
+}
+
 .flying-butterfly.animation1 {
   animation-name: moveAnimation1;
 }
@@ -268,4 +295,18 @@
   filter: brightness(0) saturate(100%) invert(91%) sepia(60%) saturate(4598%) hue-rotate(6deg) brightness(84%)
     contrast(101%);
   opacity: 0.8;
+}
+
+.hint {
+  position: absolute;
+  top: 5px;
+  left: 20px;
+  color: rgba(200, 255, 0, 0.629);
+  transition: all 0.4s;
+}
+
+.invisible {
+  pointer-events: none;
+  opacity: 0;
+  z-index: -100;
 }
