--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  transition: all 0.4s;
 
   .main__header {
     display: flex;
@@ -63,6 +64,27 @@
           font-size: 15px;
         }
       }
+    }
+
+    .main__tittle-butterfly-container {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .butterfly-button-img {
+      width: 45px;
+      height: 35px;
+      transition: all 0.4s;
+      cursor: pointer;
+      border-radius: 10px;
+      opacity: 0.7;
+    }
+
+    .butterfly-button-img:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 0px 8px rgb(255, 234, 0);
     }
   }
 
