--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -18,7 +18,7 @@
   font-style: normal;
   letter-spacing: 5px;
   margin: 0;
-  padding: 45px 20px;
+  padding: 30px 20px 45px 20px;
 
   @media (max-width: 950px) {
     padding: 20px 0;
@@ -52,4 +52,15 @@
   text-shadow: 2px 2px 4px rgb(0, 0, 0);
   font-size: 14px;
   letter-spacing: 1px;
+}
+
+.second-hint {
+  position: absolute;
+  width: 100%;
+  top: 40%;
+  left: 0;
+  z-index: -2;
+  text-align: center;
+  font-size: 24px;
+  transition: all 0.4s;
 }
